Studying polymorphic component

--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-is": "18.0.0",
+    "react-polymorphic-box": "3.0.3",
     "size-limit": "7.0.8",
     "tsdx": "0.14.1",
     "tslib": "2.3.1",
